Add Gym Member API endpoints (index, create, update)
Closes #225
